--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-JSON_FILE_NAME_PREFIX=airaConnect.machineryMessages
+Name_Maps=airaConnect.maps
+Name_Device=airaConnect.devices
+Name_Message=airaConnect.machineryMessages
