--- a/package.json
+++ b/package.json
@@ -37,14 +37,14 @@
   ],
   "scripts": {
     "build": "unbuild",
-    "dev": "unbuild --stub",
     "lint": "eslint .",
-    "prepublishOnly": "nr build",
-    "release": "bumpp && npm publish",
+    "release": "bumpp",
     "start": "esno src/index.ts",
+    "preprocess": "esno src/preprocess.ts",
+    "verify": "esno src/verify.ts",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
-    "prepare": "simple-git-hooks"
+    "clean": "find output -type f ! -name 'README.md' -delete"
   },
   "dependencies": {
     "dotenv": "^16.4.5"
