--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 Name_Maps=airaConnect.maps
 Name_Device=airaConnect.devices
+Name_CommunicationEquipment=airaConnect.communicationEquipments
 Name_Message=airaConnect.machineryMessages
